app/src/parser/geth/snapshots/rslib__parser__geth__native__tests__tx_eth_ui@eip1559_simple_transfer.json.snap
---
source: app/src/parser/geth/native.rs
expression: reduced
input_file: app/src/parser/geth/eth_testvectors/eip1559_simple_transfer.json
---
[
    "Transfer": "LUX 0.000000004886718345",
    "To": "0x0102030400000000000000000000000000000002",
    "Fee(GWEI)": "0.08",
]
