app/src/parser/geth/snapshots/rslib__parser__geth__native__tests__tx_eth_ui@eip2930_contract_call.json.snap
---
source: app/src/parser/geth/native.rs
expression: reduced
input_file: app/src/parser/geth/eth_testvectors/eip2930_contract_call.json
---
[
    "Contract": "Call",
    "Transfer": "LUX 0.0000000000001",
    "To": "0xcccccccccccccccccccccccccccccccccccccccc",
    "Contract Data: ": "0x7f7465737432000000000000000000000000000000000000000000000000...",
    "Maximun Fee(GWEI)": "0.04",
]
