app/src/parser/geth/snapshots/rslib__parser__geth__native__tests__tx_eth_ui@eip2930_contract_deploy.json.snap
---
source: app/src/parser/geth/native.rs
expression: reduced
input_file: app/src/parser/geth/eth_testvectors/eip2930_contract_deploy.json
---
[
    "Contract": "Creation",
    "Gas Limit": "40000000",
    "Funding Contract": "0.000000001",
    "Data: ": "0x7f7465737432000000000000000000859500002001000000000000000000...",
    "Maximum Fee(GWEI)": "0.04",
]
