app/src/parser/geth/snapshots/rslib__parser__geth__native__tests__tx_eth_ui@legacy_contract_call.json.snap
---
source: app/src/parser/geth/native.rs
expression: reduced
input_file: app/src/parser/geth/eth_testvectors/legacy_contract_call.json
---
[
    "Contract": "Call",
    "Transfer": "LUX 14.12582170622427136",
    "To": "0xcccccccccccccccccccccccccccccccccccccccc",
    "Contract Data: ": "0x7f7465737432000000000000000000000000000000000000000000000000...",
    "Maximun Fee(GWEI)": "100000000",
]
