app/src/parser/geth/snapshots/rslib__parser__geth__native__tests__tx_eth_ui@legacy_simple_transfer.json.snap
---
source: app/src/parser/geth/native.rs
expression: reduced
input_file: app/src/parser/geth/eth_testvectors/legacy_simple_transfer.json
---
[
    "Transfer": "LUX 14.12582170622427136",
    "To": "0xcccccccccccccccccccccccccccccccccccccccc",
    "Fee(GWEI)": "100000000",
]
